--- a/Day10.ipynb
+++ b/Day10.ipynb
@@ -25,8 +25,9 @@
    "source": [
     "def solve_day(my_file):\n",
     "    data = parse_data(my_file)\n",
-    "    print('Part 1: ', part1(data))\n",
-    "    print('Part 2: ', part2(data))\n",
+    "    trails = routes(data)\n",
+    "    print('Part 1: ', part1(trails))\n",
+    "    print('Part 2: ', part2(trails))\n",
     "\n",
     "\n",
     "def parse_data(my_file) -> list:\n",
@@ -52,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def routes(data:list) -> int:\n",
+    "def routes(data:list) -> list:\n",
     "    total=[]\n",
     "    for current in zip(*np.where(data==0)):\n",
     "        current = [current]\n",
@@ -71,8 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def part1(data:list) -> int:\n",
-    "    return sum(len(set(r)) for r in routes(data))"
+    "def part1(trails:list) -> int:\n",
+    "    return sum(len(set(r)) for r in trails)"
    ]
   },
   {
@@ -82,36 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def part2(data) -> int:\n",
-    "    return sum(len(r) for r in routes(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9facbf20-3eff-49d8-89a6-bdd7b9a4f07d",
-   "metadata": {
-    "editable": true,
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Part 1:  517\n",
-      "Part 2:  1116\n",
-      "CPU times: user 37.5 ms, sys: 217 µs, total: 37.7 ms\n",
-      "Wall time: 36.9 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time solve_day('raw.txt')"
+    "def part2(trails:list) -> int:\n",
+    "    return sum(len(r) for r in trails)"
    ]
   },
   {
