--- a/Day11.ipynb
+++ b/Day11.ipynb
@@ -45,9 +45,8 @@
     "def count_stones(stone: int, steps:int) -> int:\n",
     "    if steps == 0:\n",
     "        return 1\n",
-    "    if not (ln:=len(str_stone:=str(stone)))%2:\n",
-    "        ln=ln//2\n",
-    "        return sum(count_stones(int(st),steps-1) for st in [str_stone[:ln],str_stone[ln:]])\n",
+    "    if not (ln:=divmod(len(str_stone:=str(stone)),2))[1]:\n",
+    "        return sum(count_stones(int(st),steps-1) for st in [str_stone[:ln[0]],str_stone[ln[0]:]])\n",
     "    else:\n",
     "        return count_stones(stone*2024 if stone else 1,steps-1)"
    ]
