--- a/Day12.ipynb
+++ b/Day12.ipynb
@@ -42,9 +42,8 @@
    "outputs": [],
    "source": [
     "def find_fences(data:list) -> int:\n",
-    "    totals = []\n",
+    "    total = []\n",
     "    for v in data.values():\n",
-    "        total = []\n",
     "        while v:\n",
     "            fences = []\n",
     "            current = {v.pop()}\n",
@@ -60,8 +59,7 @@
     "                current = new\n",
     "            total.append((region,fences))\n",
     "            v-=region\n",
-    "        totals.append(total)\n",
-    "    return totals"
+    "    return total"
    ]
   },
   {
@@ -72,7 +70,7 @@
    "outputs": [],
    "source": [
     "def part1(data:list) -> int:\n",
-    "    return sum(len(r)*len(f) for letter in data for r,f in letter)"
+    "    return sum(len(r)*len(f) for r,f in data)"
    ]
   },
   {
@@ -83,21 +81,20 @@
    "outputs": [],
    "source": [
     "def part2(data:list) -> int:\n",
-    "    res =0\n",
-    "    for letter in data:\n",
-    "        for region,current in letter:\n",
-    "            total=0\n",
-    "            for plant, direction in current:\n",
-    "                if (plant-direction*-1j,direction) not in current:\n",
-    "                    total+=1\n",
-    "            res+=total*len(region)\n",
+    "    res = 0\n",
+    "    for region,current in data:\n",
+    "        total = 0\n",
+    "        for plant, direction in current:\n",
+    "            if (plant-direction*-1j,direction) not in current:\n",
+    "                total+=1\n",
+    "        res+=total*len(region)\n",
     "    return res"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60aa3dd1-6b94-419c-9817-303081e04ccb",
+   "id": "5780a155-21e7-4cae-8c72-212448d11ae0",
    "metadata": {},
    "outputs": [],
    "source": []
