--- a/Day18.ipynb
+++ b/Day18.ipynb
@@ -62,12 +62,12 @@
    "source": [
     "def part2(data:list, min_idx: int =1024, end: tuple = (70,70)) -> str:\n",
     "    max_idx = len(data)-1\n",
-    "    while min_idx < max_idx -1:\n",
+    "    while min_idx < max_idx:\n",
     "        idx = (max_idx+min_idx)//2\n",
     "        if part1(set(data[:idx+1]), end):\n",
-    "            min_idx = idx\n",
+    "            min_idx = idx+1\n",
     "        else:\n",
-    "            max_idx = idx\n",
+    "            max_idx = idx-1\n",
     "    return (','.join(str(num) for num in data[max_idx]))"
    ]
   },
