--- a/Day13.ipynb
+++ b/Day13.ipynb
@@ -47,12 +47,11 @@
     "        ax, ay, bx, by, x, y = machine\n",
     "        x += conversion\n",
     "        y += conversion\n",
-    "        a, b = Reals(\"a b\")\n",
+    "        a, b = Ints(\"a b\")\n",
     "        s = Solver()\n",
     "        s.add(ax * a + bx * b == x, ay * a + by * b == y)\n",
-    "        s.check()\n",
-    "        res = s.model()\n",
-    "        if res[a].denominator_as_long() == 1 and res[b].denominator_as_long() == 1:\n",
+    "        if s.check() == sat:\n",
+    "            res = s.model()\n",
     "            tockens += res[a].as_long() * 3 + res[b].as_long()\n",
     "    return int(tockens)"
    ]
